--- a/azure-radiator/package.json
+++ b/azure-radiator/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "axios": "^0.20.0",
     "azure-devops-node-api": "^10.1.1",
+    "ng2-izitoast": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
