Mock azure repo

--- a/azure-radiator/src/assets/azure.config.example.json
+++ b/azure-radiator/src/assets/azure.config.example.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionToken": "",
+  "ConnectionToken": "yqoqtgkqxaqkfqtygxzellkblytmswkoym3zwwnyrqpcsqb47qdq",
   "BaseAddress": "https://dev.azure.com",
-  "Organization": ""
+  "Organization": "Azure-Mock"
 }
