--- a/azure-radiator/package.json
+++ b/azure-radiator/package.json
@@ -25,7 +25,8 @@
     "azure-devops-node-api": "^10.1.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "ng2-izitoast": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.6",
